Open declarations from tooltips through the IDE's built-in web server
The "open in IDE" links in the property tooltips (web and desktop clients)
were lsfusion-protocol:// URLs that needed an OS-level handler installed by
the IDEA plugin on every developer machine, with the project's source roots
and the IDE launcher path baked into shell scripts, plus a project-dir
setting on the client side (the debugPath cookie / directory chooser) for
turning the module path into an absolute one.

The plugin now serves GET /api/lsfusion-open?path=<module file relative to
the source root>&line=&column= on IDEA's built-in web server (port 63342,
the next free one per running IDE) and resolves the file itself. Clicking a
link tries the ports 63342-63352 in turn until an IDE answers 200 (a 404 is
another IDE without the plugin); the IDE asks once whether to trust the
client's host. The web client does it with fetch (the JSNI parser predates
'catch' as a property name, hence the bracket access), the desktop client
with HttpURLConnection on a background thread. The project-dir UI and its
messages are gone; the projectLSFDir setting itself stays, it is used
elsewhere.

Verified with the rebuilt web client in a private Tomcat against the
Features sample server and the plugin's runIde sandbox: both tooltip links
("Путь: Features(35:1)", "Объявление на форме: FeaturesScript(577:22)")
opened FeaturesScript.lsf in the sandbox at those positions; the user's IDE
on 63342 (old plugin) answered 404 and was skipped. Desktop client compiled,
not exercised live.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>